phase2_Dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accept_Referral__c</fullName>
        <label>Accept Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountRecord_Type_Hidden__c</fullName>
        <description>This is used for mapping lead record type to account record type. Specifically for the conversions with the Potential provider and New Assistant</description>
        <label>AccountRecord Type (Hidden)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_books_Responsible__c</fullName>
        <label>Account/Books Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Ineligibility_Criteria__c</fullName>
        <description>Concatenates several variables into a string to be used by a script.</description>
        <formula>IF( NOT(ISPICKVAL(License_Type__c , &quot;Regular&quot;)), &quot;Provider is not on a regular license&quot;,&quot;&quot;)

&amp;

IF( NOT(ISPICKVAL(Provider_Status__c , &quot;Current&quot;)) &amp;&amp; NOT(ISPICKVAL(Provider_Status__c , &quot;Renewal in Progress&quot; )), &quot;, Provider&apos;s license is not current&quot;, &quot;&quot;)

&amp; 

IF ( Last_Address_Change_Date__c &gt;=  Last_Licensing_Visit__c , &quot;, Provider&apos;s address has changed since last qualifying licensing visit&quot;, &quot;&quot;)

&amp;

IF (  Last_Provider_Type_Change_Date__c &gt;=  Last_Licensing_Visit__c , &quot;, Provider&apos;s type has changed since last qualifying licensing visit&quot;, &quot;&quot;)

&amp;

IF ( Last_Legal_Order_Change_Date__c  &gt;=  Last_Licensing_Visit__c , &quot;, Provider has been involved in a legal action since the last qualifying licensing visit&quot;, &quot;&quot;)

&amp; 

IF ( Number_Of_Open_Complaints_Investigations__c &gt;0, &quot;, Provider has &quot; + TEXT(Number_Of_Open_Complaints_Investigations__c) + &quot; open complaints&quot;, &quot;&quot;)

&amp;

IF (  Last_Change_of_Director_Date__c   &gt;=  Last_Licensing_Visit__c , &quot;, Provider has changed licensee / administrator - director since the last qualifying licensing visit&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Ineligibility Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_admin_for_funding_source__c</fullName>
        <description>Address of contract admin for funding source</description>
        <inlineHelpText>Address of contract admin for funding source</inlineHelpText>
        <label>Address of admin for funding source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Civil_criminal_action_last_5_years__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Has the applicant or its officers had administrative, civil or criminal action brought with respect to the provision of child care services during the five years prior to the date of application?</inlineHelpText>
        <label>Admin/Civil/criminal action last 5 years</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administer_Own_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administer Own School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_New_Application_as_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow New Application as Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Renewal_as_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Renewal as Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Approved_Reg_766__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Reg. 766</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asleep_Ratio__c</fullName>
        <description>This field replaces Number of Night Staff and Number of Night Residents by just providing a ratio instead</description>
        <inlineHelpText>Staff to child ratio when residents are asleep (overnight)</inlineHelpText>
        <label>Asleep Ratio</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me_Or_Subordinates__c</fullName>
        <description>Used in report to filter on my Providers and the ones of my team. Used for Supervisor dashboard</description>
        <formula>OR(
 Assigned_to_Me__c ,
  $User.Id  =   Owner.ManagerId ,
   $User.Id  =   Owner.Manager.ManagerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me Or Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>Used in report to filter on the Provider Licensor&apos;s (My Providers)</description>
        <formula>OwnerId =  $User.Id</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistant_Certificate_Type__c</fullName>
        <formula>IF((TEXT(License_Type__c) = &quot;Regular Assistant&quot;), &quot;Regular&quot;, &quot;Certified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assistant Certificate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_CCRR__c</fullName>
        <formula>Provider_City__r.CCRR__r.Name</formula>
        <label>Associated CCRR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authority_to_Operate__c</fullName>
        <label>Authority to Operate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awake_Ratio__c</fullName>
        <description>This field replaces Number of Day Staff and Number of Day Residents by just providing a ratio instead</description>
        <inlineHelpText>Staff to child ratio when residents are awake</inlineHelpText>
        <label>Awake Ratio</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Approved_Date__c</fullName>
        <label>BRC Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bi_lingual_Licensor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bi-lingual Licensor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Codes__c</fullName>
        <label>Building Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist values awaited</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Building_Inspection_Max_Capacity__c</fullName>
        <label>Building Inspection Max. Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_inspection_expiration_Date__c</fullName>
        <label>Building inspection expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cafeteria_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cafeteria Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Camp_Permit_Issue_Date__c</fullName>
        <label>Camp Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Can_Communicate_in_English__c</fullName>
        <label>Can Communicate in English</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity_Small_Group__c</fullName>
        <label>Capacity</label>
        <picklist>
            <picklistValues>
                <fullName>6 or fewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <inlineHelpText>License total authorized capacity</inlineHelpText>
        <label>Licensed Capacity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_As__c</fullName>
        <inlineHelpText>Certificate the assistant is authorized for</inlineHelpText>
        <label>Certified As</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (10)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Characteristics_of_Children_Served__c</fullName>
        <label>Characteristics of Children Served - Tex</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Characteristics_of_children_served_pickl__c</fullName>
        <label>Characteristics of children served</label>
        <picklist>
            <picklistValues>
                <fullName>Autistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotionally Disturbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sex Offender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiply Handicapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Parenting Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire setting behaviors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuse reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBTQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medically Complex</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Children_s_Records_Responsible__c</fullName>
        <label>Children’s Records Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Search_Text_Field__c</fullName>
        <description>This field is used to make City searchable. It is used in conjunction with the Provider Update process flow to update.</description>
        <label>City Search Text Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_for_Mailing__c</fullName>
        <description>The mailing City if Shipping address is populated for Provider, else the Provider&apos;s City</description>
        <formula>IF(ISBLANK( ShippingCity),    Provider_City__r.Name   ,  ShippingCity )</formula>
        <inlineHelpText>The mailing City if Shipping address is populated for Provider, else the Provider&apos;s City</inlineHelpText>
        <label>City_for_Mailing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This link the provider to the configuration record that will be used to retrieve default values.</description>
        <label>Config Record</label>
        <referenceTo>LEAD_Configuration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Type__c</fullName>
        <label>Country Type</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other(s)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_License_Number__c</fullName>
        <label>Current License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Restraint_Report__c</fullName>
        <formula>DATE(YEAR(TODAY()), IF(AND(MONTH(TODAY())&gt;=1, MONTH(TODAY())&lt;=3),1, IF(AND(MONTH(TODAY())&gt;=4, MONTH(TODAY())&lt;=6),4, IF(AND(MONTH(TODAY())&gt;=7, MONTH(TODAY())&lt;=9),7,10))),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First day of the current quarter</inlineHelpText>
        <label>Current Restraint Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DCF_Number_of_Children_Placed_in_Care__c</fullName>
        <label>Number of Children Placed in Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Activities_Responsible__c</fullName>
        <label>Daily Activities Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_license_Expiration__c</fullName>
        <description>Other License Expiration Date</description>
        <label>Date of license Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_outdoor_play_location__c</fullName>
        <inlineHelpText>Describe the outdoor play location</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Inspection__c</fullName>
        <label>Lead Paint: Detailed Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Differential_Licensing_Lifecycle__c</fullName>
        <inlineHelpText>This field is automatically updated by the system when a provider is going through licensing visits and these visits are closed. It&apos;s used in dashboard / reporting.</inlineHelpText>
        <label>Next differential licensing visit reason</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Licensing Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_In_Service_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop In Service Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Childhood_Education_Program_Resp__c</fullName>
        <label>Early Childhood Education Program Resp.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electronic_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, emails and documents will be sent electronically. Also, electronic signature will be required. If unchecked, all communication will be paper and the email address is not mandatory.</description>
        <inlineHelpText>If checked, emails and documents will be sent electronically. Also, electronic signature will be required.</inlineHelpText>
        <label>Electronic Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Responsible__c</fullName>
        <label>Equipment Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evenings_Service_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evenings Service Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Fiduciary_Admin_relationshi__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Does the applicant have fiduciary or administrative relationships to other child care agencies or independent contractors?</inlineHelpText>
        <label>Existing Fiduciary/ Admin relationshi</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Day_Available_On__c</fullName>
        <globalPicklist>Days_of_the_week</globalPicklist>
        <label>Extended Day Available On</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Extended_Day_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the program offer extended day?</inlineHelpText>
        <label>Extended Day Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCC_Main_Contact_Licensee__c</fullName>
        <label>FCC Main Contact/Licensee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCC System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Umbrella</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Child Care Associated (FCC System)</relationshipLabel>
        <relationshipName>FCC_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Documentation_Responsible__c</fullName>
        <label>Financial Documentation Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Inspection_Issue_date__c</fullName>
        <label>Fire Inspection Issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstDateTakenFCCII__c</fullName>
        <label>First Date Taken FCC II</label>
        <summarizedField>Licensing_Transaction__c.Date_FCC_Orientation_Taken__c</summarizedField>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Took_FCC_Orientation__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed (License Issued / Updated)</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Current_Month__c</fullName>
        <description>Calculates the first date in the current month</description>
        <formula>DATE( MONTH(TODAY()),  1 ,  YEAR(TODAY()) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the first date in the current month</inlineHelpText>
        <label>First Date of Current Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Next_Month__c</fullName>
        <description>Calculates the first date of the next month</description>
        <formula>DATE ( MONTH(TODAY()) + 1, 1, IF(MONTH(TODAY()) = 12, YEAR(TODAY()) + 1, YEAR(TODAY())))</formula>
        <inlineHelpText>Calculates the first date of the next month</inlineHelpText>
        <label>First Date of Next Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Issue_Date__c</fullName>
        <inlineHelpText>License first issue date</inlineHelpText>
        <label>First Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foster_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foster Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Day_Program_Available_From__c</fullName>
        <globalPicklist>Hours_of_Day</globalPicklist>
        <label>Full Day Program Available From</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Day_Program_Available_On__c</fullName>
        <globalPicklist>Days_of_the_week</globalPicklist>
        <label>Full Day Program Available On</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Full_Day_Program_Available_To__c</fullName>
        <globalPicklist>Hours_of_Day</globalPicklist>
        <label>Full Day Program Available To</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp;  Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_School_Year__c</fullName>
        <label>Operation Type</label>
        <picklist>
            <picklistValues>
                <fullName>School Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Small Group (&lt;= 10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group (&gt; 10)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gym_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Half_Day_Afternoon_Program_Avail_From__c</fullName>
        <globalPicklist>Hours_of_Day</globalPicklist>
        <label>Half Day Afternoon Program Avail. From</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Half_Day_Afternoon_Program_Available_On__c</fullName>
        <globalPicklist>Days_of_the_week</globalPicklist>
        <label>Half Day Afternoon Program Available On</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Half_Day_Afternoon_Program_Available_To__c</fullName>
        <globalPicklist>Hours_of_Day</globalPicklist>
        <label>Half Day Afternoon Program Available To</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Half_Day_Morning_Program_Available_From__c</fullName>
        <globalPicklist>Hours_of_Day</globalPicklist>
        <label>Half Day Morning Program Available From</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Half_Day_Morning_Program_Available_On__c</fullName>
        <globalPicklist>Days_of_the_week</globalPicklist>
        <label>Half Day Morning Program Available On</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Half_Day_Morning_Program_Available_To__c</fullName>
        <globalPicklist>Hours_of_Day</globalPicklist>
        <label>Half Day Morning Program Available To</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Camp_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Camp Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Full_Day_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Full Day Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Half_Day_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Half Day Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Medical_Administration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Medical Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Multi_Age_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Multi-Age Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Inspection_Expiration_Date__c</fullName>
        <label>Health Inspection Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress_Transaction__c</fullName>
        <label>In Progress Transaction</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Submitted, Under Review, Pending Manager Approval, Approved By Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Indoor_Compliance_with_ADA__c</fullName>
        <globalPicklist>Yes_No_Not_Sure</globalPicklist>
        <label>Indoor Compliance with ADA</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indoor_Square_Footage__c</fullName>
        <label>Indoor Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_Toddler_Program_Responsible__c</fullName>
        <inlineHelpText>Only if applicable (must be Lead Teacher Qualified)</inlineHelpText>
        <label>Infant/Toddler Program Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infant_Toddler_birth_33_mo__c</fullName>
        <label>Infant/Toddler (birth - 33 mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_birth_15_mo__c</fullName>
        <label>Infant (birth - 15 mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integrated_Pest_Management_Date__c</fullName>
        <label>Integrated Pest Management Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>International_Adoption_Countries__c</fullName>
        <label>International Adoption Countries</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other(s)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Account_From_Lead_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if Account is created from Lead convert</description>
        <label>Is Account From Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expired_Provider__c</fullName>
        <formula>IF( Renewal_date__c  &lt; TODAY(), TRUE, FALSE)</formula>
        <label>Is Expired Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FCC__c</fullName>
        <description>Used for Validating with regulation (Key indicator)</description>
        <formula>IF(RecordType.Name == &apos;Family Child Care&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is FCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GSA__c</fullName>
        <description>Will be true if this provider is a Large Group or Small Group</description>
        <formula>OR ( Record_Type_Name__c  = &apos;Large Group&apos;, Record_Type_Name__c   = &apos;Small Group&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True when Legacy Providers are imported in LEAD</description>
        <label>Is Legacy Provider</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>